# exaflow-ml

./: .gitignore  1d_burgers_solver.cpp  CMakeLists.txt  CONTRIBUTING.md  README.md  burgers  burgers_simulation_cpp  git stash  python_burgers_solver.py  visualizing _output.py
data/step_function/: timestep_00000.txt  timestep_00001.txt  timestep_00002.txt  timestep_00003.txt  timestep_00004.txt  timestep_00005.txt  timestep_00006.txt  timestep_00007.txt  timestep_00008.txt  timestep_00009.txt  timestep_00010.txt  timestep_00011.txt  timestep_00012.txt  timestep_00013.txt  timestep_00014.txt  timestep_00015.txt  timestep_00016.txt  timestep_00017.txt  timestep_00018.txt  timestep_00019.txt  timestep_00020.txt  timestep_00021.txt  timestep_00022.txt  timestep_00023.txt  timestep_00024.txt  timestep_00025.txt  timestep_00026.txt  timestep_00027.txt  timestep_00028.txt  timestep_00029.txt  timestep_00030.txt  timestep_00031.txt  timestep_00032.txt  timestep_00033.txt  timestep_00034.txt  timestep_00035.txt  timestep_00036.txt  timestep_00037.txt  timestep_00038.txt  timestep_00039.txt  (+161 more)
include/: artificial_viscosity_model.h  burger_scheme.h  burger_stencil.h  burgers.h  burgers_godunov2d.h  initial_condition_generator.h
neuralnet/: artificial_viscosity_model.cpp  burgers_solution.py  constants.py  example_usage.cpp  main.py  non_zero_viscosity_generator.py  test_non_zero_gen.py
python/: visualizing_output.py
src/: burgers.cpp  burgers_godunov2d.cpp  initial_condition_generator.cpp  main.cpp  main_godunov2d.cpp  training_data_generator.cpp
src/schemes/: ftcs.cpp  godunov.cpp  lax_wendroff.cpp
src/stencils/: Godunov.cpp  ftcs.cpp  lax_wendroff.cpp
visualizer/: plot_wiki.py  visualize.py  visualize_godunov2d.py  visualize_wiki.py
